[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
tera = { version = "1" }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = { version = "0.15" } 
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
r2d2 = { version = "0.8.10" }
