[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-settings = { version = "0.6.0" }
tera = { version = "1" }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
r2d2 = { version = "0.8.10" }
env_logger = { version = "0.9.1" }
ahash = { version="0.8.0" }
